--- a/styles.css
+++ b/styles.css
@@ -9,20 +9,21 @@ body {
 main {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 20vh 80vh;
+    grid-template-rows: 25vh 75vh;
+    background-color: white;
 }
 
 #sidebar {
-    background-color: darkcyan;
+    background-color:red;
     grid-row: 1 / 3;
     display: grid;
-    grid-template-rows: 1fr 2fr 3fr;
-    gap: 10vh;
+    grid-template-rows: 1fr 5fr 6fr;
+    gap: 5vh;
     padding: 2vw;
 }
 
 #logo {
-    text-align: center;
+    text-align: left;
     font-size: 36px;
     font-weight: bold;
     color: white;
@@ -48,11 +49,61 @@ main {
 }
 
 #header {
-    background-color: bisque;
+    background-color:white;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 16px;
+}
+
+#header-top-row {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+
+#search-input {
+    width: 60%;
+    padding: 7px;
+    border-radius: 20px;
+    position: relative;
+    top: 20%;
+    left: 15%;
+    background-color: gainsboro;
+    border: 0;
+}
+
+#search-input:focus {
+    outline: 0;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#account-utils {
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr;
+    font-size: 20px;
+    font-weight: bold;
+    align-items: center;
+}
+
+#account-utils img {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 100%;
+    width: 60px;
+    grid-column: 2 / 3;
+}
+
+#header-bottom-row {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+#welcome-section {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
 }
 
 #content {
-    background-color: blueviolet;
+    background-color: transparent;
 }
 
 a {
