--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ main {
 
 #search-input {
     width: 60%;
-    padding: 7px;
+    padding: 10px;
     border-radius: 20px;
     position: relative;
     top: 20%;
@@ -86,24 +86,45 @@ main {
 }
 
 #account-utils img {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 100%;
-    width: 60px;
+    border-radius: 44px;
+    width: 70px;
+    height: 70px;
     grid-column: 2 / 3;
 }
 
 #header-bottom-row {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 3fr 2fr;
 }
 
 #welcome-section {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns:  1fr 4fr;
+    padding-left: 3vw;
 }
+
+#buttons {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 20px;
+    gap: 10px;
+}
+
 
 #content {
     background-color: transparent;
+}
+
+.btn {
+    background-color: red;
+    color: white;
+    font-weight: bold;
+    border-radius: 30px;
+    border: 0;
+}
+
+.btn:hover {
+    background-color: rgb(220, 0, 0);
 }
 
 a {
