--- a/styles.css
+++ b/styles.css
@@ -9,17 +9,18 @@ body {
 main {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 25vh 75vh;
-    background-color: white;
+    grid-template-rows: 25vh;
+    background-color: azure;
 }
 
 #sidebar {
     background-color:red;
     grid-row: 1 / 3;
     display: grid;
-    grid-template-rows: 1fr 5fr 6fr;
+    grid-template-rows: 10vh 30vh 50vh;
     gap: 5vh;
     padding: 2vw;
+    z-index: 1;
 }
 
 #logo {
@@ -61,13 +62,20 @@ main {
     grid-template-columns: 2fr 1fr;
 }
 
+#search-bar {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    align-items: center;
+}
+
+#search-bar a {
+    text-align: right;
+}
+
 #search-input {
     width: 60%;
     padding: 10px;
     border-radius: 20px;
-    position: relative;
-    top: 20%;
-    left: 15%;
     background-color: gainsboro;
     border: 0;
 }
@@ -79,31 +87,42 @@ main {
 
 #account-utils {
     display: grid;
-    grid-template-columns: 1fr 1fr 2fr;
+    grid-template-columns: 1fr 1fr 3fr;
     font-size: 20px;
     font-weight: bold;
     align-items: center;
 }
 
 #account-utils img {
-    border-radius: 44px;
     width: 70px;
     height: 70px;
     grid-column: 2 / 3;
+    box-sizing: border-box;
+    border: 5px solid black;
+    border-radius: 52%;
 }
 
 #header-bottom-row {
     display: grid;
-    grid-template-columns: 3fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 #welcome-section {
+    grid-column: 1 / 2;
     display: grid;
-    grid-template-columns:  1fr 4fr;
+    grid-template-columns:  1fr 2fr;
     padding-left: 3vw;
 }
 
+#welcome-section img {
+    box-sizing: border-box;
+    border: 5px solid black;
+    border-radius: 52%;
+    width: 60%;
+}
+
 #buttons {
+    grid-column: 3 / 4;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     padding: 20px;
@@ -113,6 +132,43 @@ main {
 
 #content {
     background-color: transparent;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    margin: 40px;
+}
+
+#projects {
+    grid-row: 1 / 3;
+    padding: 16px;
+}
+
+#projects-header-text {
+    font-weight: bold;
+    font-size: 26px;
+}
+
+#projects-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 26px;
+}
+
+.project-card {
+    background-color: white;
+    height: 250px;
+    border-left: 10px solid red;
+    box-sizing: border-box;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#announcements {
+    background-color: blueviolet;
+}
+
+#trending {
+    background-color: chartreuse;
 }
 
 .btn {
