--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,9 @@ main {
 
 #search-bar a {
     text-align: right;
+    margin-right: 15px;
+    font-size: larger;
+    color: red;
 }
 
 #search-input {
@@ -98,7 +101,7 @@ main {
     height: 70px;
     grid-column: 2 / 3;
     box-sizing: border-box;
-    border: 5px solid black;
+    border: 5px solid red;
     border-radius: 52%;
 }
 
@@ -116,7 +119,7 @@ main {
 
 #welcome-section img {
     box-sizing: border-box;
-    border: 5px solid black;
+    border: 5px solid red;
     border-radius: 52%;
     width: 60%;
 }
@@ -133,13 +136,14 @@ main {
 #content {
     background-color: transparent;
     display: grid;
-    grid-template-columns: 3fr 1fr;
-    margin: 40px;
+    grid-template-columns: 2fr 1fr;
+    margin: 30px;
 }
 
 #projects {
     grid-row: 1 / 3;
-    padding: 16px;
+    padding: 15px;
+    padding-top: 0;
 }
 
 #projects-header-text {
@@ -159,12 +163,52 @@ main {
     border-left: 10px solid red;
     box-sizing: border-box;
     border-radius: 10px;
-    padding: 10px;
+    padding: 15px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.project-card:hover {
+    box-shadow: 0px 0px 15px 5px lightslategray;
+}
+
+.card-header {
+    font-weight: bold;
+}
+
+.card-text {
+    color: darkslategrey;
+}
+
+.card-icons {
+    text-align: right;
+    padding: 20px;
+    margin-top: 10px;
+    font-size: 25px;
+}
+
+.card-icons a {
+    color: red;
+}
+
 #announcements {
-    background-color: blueviolet;
+    padding: 15px;
+}
+
+#announcements-container {
+    padding: 15px;
+    padding-top: 0;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    gap: 16px;
+}
+
+#announcements-header-text {
+    font-weight: bold;
+    font-size: 26px;
+}
+
+.announcement-card {
+    background-color: white;
 }
 
 #trending {
