--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,7 @@ main {
     background-color: transparent;
     display: grid;
     grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
     margin: 30px;
 }
 
@@ -192,14 +193,16 @@ main {
 
 #announcements {
     padding: 15px;
+    grid-row: 1 / 2;
 }
 
 #announcements-container {
     padding: 15px;
-    padding-top: 0;
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: 1fr 1fr 1fr;
     gap: 16px;
+    background-color: white;
+    border-radius: 10px;
 }
 
 #announcements-header-text {
@@ -207,8 +210,17 @@ main {
     font-size: 26px;
 }
 
+.announcement-header {
+    font-weight: bold;
+}
+
+.announcement-text {
+    color: darkslategrey;
+}
+
 .announcement-card {
     background-color: white;
+    padding: 5px;
 }
 
 #trending {
